--- a/Css/style.css
+++ b/Css/style.css
@@ -89,7 +89,7 @@ main {
 }
 
 .heading {
-    width: 590px;
+    max-width: 590px;
     height: 100%;
     margin-bottom: 72px;
 
@@ -116,8 +116,9 @@ main {
 }
 
 .card__produto {
-    width: 384px;
+    width: 336px;
     height: 326px;
+    flex-basis: 336px;
 
     figure {
         width: 100%;
@@ -148,4 +149,71 @@ h5 {
     line-height: 26px;
     color: var(--brand-color);
 }
+}
+
+@media (max-width: 768px){
+    .top_fixed {
+        height: 41px;
+        font-size: 16px;
+    }
+    .hero {
+        height: 350px;
+    }
+    .hero__content h1 {
+        font-size: 18px;
+    }
+    .hero__content h2 {
+        font-size: 24px;
+    }
+    .hero__content p {
+        font-size: 18px;
+        line-height: 28px;
+    }
+    .heading__produtos {
+        padding-inline: 20px;
+    }
+    .heading__produtos h3 {
+        font-size: 24px;
+    }
+    .heading__produtos p {
+        font-size: 16px;
+        line-height: 26px;
+    }
+    .lista__produtos {
+        margin-block: 32px;
+        gap: 32px;
+    }
+    .card__produto_detalhes h4 {
+        font-size: 18px;
+    }
+    .card__produto_detalhes h5 {
+        font-size: 16px;
+    }
+    .card__produto h6 {
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 375px){
+    .top_fixed {
+        height: 39px;
+    }
+    .hero__content p {
+        font-size: 16px;
+        line-height: 26px;
+    }
+    .heading__produtos h3 {
+        font-size: 24px;
+    }
+    .heading__produtos p {
+        font-size: 14px;
+        line-height: 24px;
+    }
+    .lista__produtos {
+        margin-block: 24px;
+        gap: 24px;
+    }
+    .card__produto_detalhes h4 {
+        font-size: 16px;
+    }
 }
