--- a/Css/style.css
+++ b/Css/style.css
@@ -1,22 +1,19 @@
 :root {
     --brand-color: #7ca2f4;
     --dark: #121214;
-    --white_soft: #F3F7FF;
+    --white_soft: #eceef3;
     --white: #ffffff;
 }
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-
 body {
     width: 100%;
     height: 100%;
     font-family: Archivo, sans-serif;
 }
-
 .top_fixed {
     width: 100%;
     height: 64px;
@@ -26,7 +23,6 @@ body {
     align-items: center;
     justify-content: center;
 }
-
 .hero {
     width: 100%;
     height: 400px;
@@ -39,13 +35,11 @@ body {
     align-items: center;
     justify-content: center;
 }
-
 .hero__content {
     width: 70%;
     height: auto;
     color: var(--white);
 }
-
 .hero__content h1 {
     font-size: 24px;
     margin-bottom: 20px;
@@ -56,18 +50,15 @@ body {
         margin-right: 10px;
     }
 }
-
 .hero__content h2 {
     font-size: 32px;
     margin-bottom: 20px;
 }
-
 .hero__content p {
     font-size: 24px;
     margin-bottom: 20px;
     line-height: 34px;
 }
-
 main {
     width: 100%;
     height: 100%;
@@ -75,8 +66,8 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
 }
-
 .produtos {
     width: 90%;
     height: 100%;
@@ -87,7 +78,6 @@ main {
     align-items: center;
     justify-content: center;
 }
-
 .heading {
     max-width: 590px;
     height: 100%;
@@ -103,7 +93,6 @@ main {
         font-size: 24px;
     }
 }
-
 .lista__produtos {
     width: 100%;
     height: 100%;
@@ -114,7 +103,6 @@ main {
     flex-wrap: wrap;
     gap: 32px;
 }
-
 .card__produto {
     width: 336px;
     height: 326px;
@@ -135,7 +123,10 @@ main {
         font-family: "Space Grotesk", sans-serif;
     }
 }
-
+.card__produto figure:hover {
+    border: 1px solid var(--brand-color);
+    cursor: pointer;
+}
 .card__produto_detalhes {
     margin-block: 24px;
 
@@ -150,7 +141,6 @@ h5 {
     color: var(--brand-color);
 }
 }
-
 @media (max-width: 768px){
     .top_fixed {
         height: 41px;
@@ -193,7 +183,6 @@ h5 {
         font-size: 20px;
     }
 }
-
 @media (max-width: 375px){
     .top_fixed {
         height: 39px;
@@ -216,4 +205,167 @@ h5 {
     .card__produto_detalhes h4 {
         font-size: 16px;
     }
+}
+.Produto__detalhes {
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 32px;
+    justify-content: center;
+}
+.Produto__detalhes_imagens {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 24px;
+}
+.Produto__detalhes_imagens figure {
+    width: 100%;
+    height: 200px;
+    background-color: var(--white_soft);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.detalhes{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.detalhes h4 {
+    font-size: 24px;
+}
+.detalhes h5 {
+    font-size: 16px;
+    color: var(--brand-color);
+}
+.detalhes h6 {
+    font-size: 24px;
+    font-family: "Space Grotesk", sans-serif;
+}
+.tamanho h5 {
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+.tamanhos {
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    gap: 8px;
+}
+.numeros {
+    height: 40px;
+    border: 1px solid#ccc;
+}
+.descricao {
+    font-size: 16px;
+    line-height: 26px;
+    font-weight: 400;
+}
+.descricao p {
+    margin-bottom: 10px;
+}
+.descricao ul {
+    margin-left: 20px;
+}
+.detalhes, .tamanho, .botao, .descricao {
+    margin-bottom: 20px;
+}
+.botao {
+    width: 100%;
+}
+.botao button {
+    width: 100%;
+    height: 50px;
+    border-radius: 50px;
+    background-color: var(--dark);
+    color: var(--white);
+    border: 0;
+    cursor: pointer;
+    font-size: 16px;
+}
+details::marker,
+summary::marker{
+    content: "";
+}
+summary {
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+    height: 24px;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+.icone-expandir::after,
+.icone-recolher::after {
+    content: "";
+    display: inline-flex;
+    width: 16px;
+    height: 16px;
+    background-image: url('../Imagens/icon_expand_more.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-left: 5px;
+}
+.icon-recolher::after {
+    background-image: url('../Imagens/icon_expand_less.svg');
+}
+details {
+    font-size: 16px;
+}
+details p {
+    margin-bottom: 15px;
+}
+label {
+    margin-bottom: 5px;
+}
+.input {
+    margin-block: 10px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+.input input {
+    width: 100%;
+    height: 50px;
+    border-radius: 50px;
+    border: 1px solid #ccc;
+    font-size: 20px;
+    padding-left: 20px;
+}
+.input button {
+    font-size: 16px;
+    font-weight: 500;
+    width: 120px;
+    height: 40px;
+    background-color: var(--white);
+    border-radius: 50px;
+    border: 1px solid #ccc;
+    font-size: 20px;
+    cursor: pointer;
+    position: absolute;
+    bottom: 5px;
+    right: 0px;
+    margin-right: 5px;
+}
+.input button:hover {
+    border-color: #222;
+}
+details a {
+    color: var(--dark);
+    font-weight: bold;
+    margin-top: 20px;
+}
+.voltar {
+    margin-top: 10px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    padding: 10px;
+}
+.voltar:hover {
+    cursor: pointer;
+    border: 1px solid var(--brand-color);
 }
