--- a/Css/style.css
+++ b/Css/style.css
@@ -350,13 +350,13 @@ h5 {
 .descricao ul {
     margin-left: 20px;
 }
-.detalhes, .tamanho, .botao, .descricao {
+.detalhes, .tamanho, .btn__add_cart, .descricao {
     margin-bottom: 20px;
 }
-.botao {
+.btn__add_cart {
     width: 100%;
 }
-.botao button {
+.btn__add_cart button {
     width: 100%;
     height: 50px;
     border-radius: 50px;
