--- a/Css/style.css
+++ b/Css/style.css
@@ -14,7 +14,6 @@ body {
     height: 100%;
     font-family: Archivo, sans-serif;
 }
-
 .topo {
     position: fixed;
     top: 0;
@@ -24,8 +23,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    z-index: 999;
 }
-
 .topo__marca a {
     display: flex;
     align-items: center;
@@ -34,33 +33,33 @@ body {
     text-decoration: none;
     color: var(--dark);
 }
-
 .topo__marca img {
     margin-right: 5px;
 }
-
 .topo__marca h1 {
     font-size: 24px;
 }
-
 .btn__carrinho {
     position: relative;
-    display: inline-block;
+    display: flex;
 }
-
+.btn__carrinho_icone {
+    position: relative;
+}
+.btn__carrinho_user {
+    display: flex;
+    align-items: center;
+}
 .btn__carrinho span {
     margin-right: 10px;
     cursor: pointer;
 }
-
 .btn__carrinho .icone {
     font-size: 28px;
 }
-
 .btn__carrinho .icone:hover {
     filter: invert(0.5);
 }
-
 .btn__carrinho .numero_itens {
     position: absolute;
     top: -5px;
@@ -74,7 +73,6 @@ body {
     text-align: center;
     line-height: 18px;
 }
-
 .top_fixed {
     width: 100%;
     height: 64px;
@@ -416,6 +414,24 @@ label {
     font-size: 20px;
     padding-left: 20px;
 }
+.bloco {
+    width: 100%;
+    margin-block: 20px;
+}
+.input .checkbox {
+    width: 20px;
+}
+.input select {
+    background-image: url('../images/icon_expand_more.svg');
+    background-repeat: no-repeat;
+    background-position: right 20px center;
+    background-size: 25px;
+    padding-right: 20px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -o-apparence: none;
+    appearance: none;
+}
 .input button {
     font-size: 16px;
     font-weight: 500;
@@ -484,4 +500,88 @@ table td {
 }
 tfoot {
     text-align: right;
+}
+.carrinho__detalhes {
+    width: 100%;
+    margin-top: 300px;
+    display: flex;
+    justify-content: space-between;
+}
+.carrinho__detalhes label, .carrinho__detalhes h3 {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+/* .carrinho__detalhes .frete */
+.carrinho__detalhes .frete p {
+    margin-bottom: 10px;
+}
+/* .carrinho__detalhes .cupom_desconto */
+.cupom_desconto input {
+    min-width: 320px;
+}
+/* .carrinho__detalhes .resumo */
+.carrinho__detalhes .resumo {
+    min-width: 300px;
+    display: flex;
+    flex-direction: column;
+}
+.resumo ul {
+    margin-bottom: 20px;
+}
+.resumo li {
+    font-size: 16px;
+    line-height: 48px;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #ccc;
+}
+.resumo li:first-child {
+    border-top: 1px solid #ccc;
+}
+@media (max-width: 1024px) {
+    .carrinho__detalhes {
+        flex-direction: column;
+        gap: 20px;
+    }
+    .carrinho__detalhes label, .carrinho__detalhes h3 {
+        font-size: 18px;
+    }
+    .carrinho__detalhes p {
+        font-size: 14px;
+    }
+}
+.identificacao, .pagamento {
+    margin-top: 50px;
+    padding-inline: 20px;
+    width: 100%;
+}
+.identificacao h2, .pagamento h2 {
+    text-align: center;
+}
+.pagamento h3 {
+    margin-block: 10px;
+}
+.btn_continuar, .btn_finalizar_compra, .btn_finalizar_cadastro{
+    width: 100%;
+    height: 50px;
+    border-radius: 50px;
+    background-color: var(--dark);
+    color: var(--white);
+    border: 0;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.campo-invalido {
+    border-color: red !important;
+}
+
+.campo-valido {
+    border-color: green !important;
+}
+
+.erro {
+    color: red;
+    margin-left: 5px;
 }
